Fix issue with overlap on Chrome

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,6 +9,7 @@
   height: 100%
   // Account for the width of the sidebar. Yes, magic numbers are evil, but I
   // can't figure out a better way.
+  left: 48px
   width: calc(100% - 48px)
   overflow: scroll
   padding: 5%
